k8s/iam-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iam-service
  template:
    metadata:
      labels:
        app: iam-service
    spec:
      containers:
        - name: iam-service
          image: registry.deti/project_egs_iam_service:latest
          imagePullPolicy: Always
          command: ["python", "-m", "iam_service.app_iam"]
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: iam-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  type: ClusterIP
  selector:
    app: iam-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-service-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - grupo3-egs-deti-ua.pt
      secretName: transactions-tls
  rules:
    - host: grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /iam
            pathType: Prefix
            backend:
              service:
                name: iam-service
                port:
                  number: 5000
