k8s/payment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-frontend
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-frontend
  template:
    metadata:
      labels:
        app: payment-frontend
    spec:
      containers:
        - name: frontend
          image: registry.deti/project_egs_payment_frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5174
---
apiVersion: v1
kind: Service
metadata:
  name: payment-frontend-svc
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  type: ClusterIP
  selector:
    app: payment-frontend
  ports:
    - name: http
      port: 80
      targetPort: 5174

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-frontend-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - grupo3-egs-deti-ua.pt
      secretName: transactions-tls
  rules:
    - host: grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /payment-api
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5002
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-frontend-svc
                port:
                  number: 80
