k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-postgres
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-postgres
  template:
    metadata:
      labels:
        app: payment-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U payuser -d payment_db -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: payment-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: payment-postgres
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  selector:
    app: payment-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      hostAliases:
        - ip: "193.136.82.35"
          hostnames:
            - "grupo3-egs-deti-ua.pt"
            - "payment-keycloak.grupo3-egs-deti-ua.pt"
            - "payment-api.grupo3-egs-deti-ua.pt"
            - "payment.grupo3-egs-deti-ua.pt"
      containers:
        - name: payment-service
          image: registry.deti/project_egs_payment_service:latest
          imagePullPolicy: Always
          command: ["python", "payment_service/app_payment.py"]
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  selector:
    app: payment-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - grupo3-egs-deti-ua.pt
      secretName: transactions-tls
  rules:
    - host: grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /payment-api
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5002
