k8s/transactions-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-frontend
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transactions-frontend
  template:
    metadata:
      labels:
        app: transactions-frontend
    spec:
      containers:
        - name: frontend
          image: registry.deti/project_egs_frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: transactions-frontend-svc
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  type: ClusterIP
  selector:
    app: transactions-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactions-frontend-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: transactions-frontend.grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transactions-frontend-svc
                port:
                  number: 80
