k8s/transactions-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-postgres
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-postgres
  template:
    metadata:
      labels:
        app: transactions-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U myuser -d transaction_db -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: transactions-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: transactions-postgres
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  selector:
    app: transactions-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-service
  template:
    metadata:
      labels:
        app: transactions-service
    spec:
      containers:
        - name: transactions-service
          image: registry.deti/project_egs_transactions_service:latest
          imagePullPolicy: Always
          command: ["java", "-jar", "/app/app.jar"]
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  selector:
    app: transactions-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactions-service-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - grupo3-egs-deti-ua.pt
      secretName: transactions-tls
  rules:
    - host: grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /transactions-api
            pathType: Prefix
            backend:
              service:
                name: transactions-service
                port:
                  number: 8081
