k8s/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.17.6
          imagePullPolicy: IfNotPresent
          command: ["vault", "server", "-dev", "-dev-root-token-id=root", "-dev-listen-address=0.0.0.0:8200"]
          ports:
            - containerPort: 8200

---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: tenant-grupo3-egs-deti-ua-pt
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: tenant-grupo3-egs-deti-ua-pt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - vault.grupo3-egs-deti-ua.pt
      secretName: transactions-tls
  rules:
    - host: vault.grupo3-egs-deti-ua.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
